[package]
name = "git_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = {version = "0.20.2", features = ["https","vendored-libgit2"] }
# git2 = { version = "0.20.1", features = ["https", "rustls"] }
# git2 = { version = "0.18.3", features = ["https", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9"
futures-util = "0.3"
config = "0.15.11"
log = "0.4"
custom_logger = "0.1.0"
chrono = "0.4"
walkdir = "2.3"
clap = {version = "4.5.39", features = ["derive"] }
actix-web = "4.6.0"
actix-multipart = "0.7.2"
toml = "0.8.10" 
thiserror = "2.0.12"
sea-orm = { version = "1.1.11", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
secrecy = "0.8" 
dotenv = "0.15"     # 环境变量管理（开发环境使用）
anyhow = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tempfile = "3.9.0"           # 临时文件处理
actix-files = "0.6.6"

 # openssl = { version = "0.10.73", features = ["vendored"] }  # HTTPS 证书（自签名)